修改配置文件为存储到db

--- a/server/src/main/resources/file.conf
+++ b/server/src/main/resources/file.conf
@@ -10,7 +10,7 @@ service {
 ## transaction log store, only used in seata-server
 store {
   ## store mode: file、db
-  mode = "file"
+  mode = "db"
 
   ## file store property
   file {
@@ -26,7 +26,7 @@ store {
     db-type = "mysql"
     driver-class-name = "com.mysql.jdbc.Driver"
     url = "jdbc:mysql://127.0.0.1:3306/seata"
-    user = "mysql"
-    password = "mysql"
+    user = "root"
+    password = "123456"
   }
 }
